Windows QPA: Fix broken focus for native child windows

This issue was caused by missing logic in the implementation of the
pointer message handler, necessary to support "click to focus" for
native child windows.

Fixes: QTBUG-71352
Change-Id: I2e261caa8dfab096647799ec1e7d781bec40654e
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>